Tag alignment fixes

--- a/app/assets/stylesheets/view_stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/view_stylesheets/notes.css.scss
@@ -922,7 +922,7 @@ textarea.comment-text, #newcomment, .comment .new-reply-panel .newreply {
           color: white;
           background-color: rgba(0, 0, 0, 0.25);
           -webkit-transition: all 0.2s ease;
-          padding: 4px 4px 4px 5px;
+          padding: 4px 4px 4px 4px;
           margin-right: 4px;
           margin-bottom: 4px;
           border-radius: 3px;
@@ -1033,10 +1033,11 @@ textarea.comment-text, #newcomment, .comment .new-reply-panel .newreply {
             transition: width 0s ease;
             transition-delay: 0.2s;
             width: 106px;  
-            height: 16px;
+            height: 17px;
             padding: 0;
             margin: 0;
             margin-top: -3px;
+            margin-bottom: -1px;
             background: transparent;
             border-radius: 0;
             border: none;
